--- a/front-end/index.html
+++ b/front-end/index.html
@@ -74,7 +74,7 @@
 
     <main>
         <div class="login">
-            <form action="" method="get" id="entrar">
+            <form action="" method="post" id="entrar">
 
                 <div class="t">
                 
@@ -96,7 +96,7 @@
                
                 <div class="cad2">
                 <a href=""> Esqueceu a senha? Clique aqui </a>   
-                <input type="button" value="Logar">
+                <br><button> Logar</button>
             </div>
             </div>
 
