--- a/front-end/Tela login/index.html
+++ b/front-end/Tela login/index.html
@@ -117,7 +117,7 @@
             </h2>
             <div class="cad3">
                 
-            <button> Cadastre-se </button>
+            <a href="../Tela cadastro/index.html"> <button> Cadastre-se </button> </a>
         
         </div>
         </div>
